# chip8

./: .clang-format  .clang-tidy  CMakeLists.txt  Makefile
src/: chip8.c
